<resources>
    <string name="app_name">"Boîta'Médoc"</string>
    <string name="title_accueil">Accueil</string>
    <string name="title_traitement">Traitement</string>
    <string name="title_boite">Boîte</string>
    <string name="title_libre_service">Libre-Service</string>
    <string name="title_profil">Profil</string>
    <string name="txt">Pour plus d\'informations sur un médicament, Veuillez appuyer sur une case</string>
    <string name="libreservicetext">Veuillez choisir le médicament que vous voulez</string>
    <string name="title_settings">Settings</string>
    <string name="se_connecter"><u>Se connecter</u></string>
    <string name="name_gestionnaire">"Bienvenue name"</string>
    <string name="name_patient">"Patient : name"</string>
    <string name="boite_connexion">Boite Connecté</string>
    <string name="agencement_boite_name_accueil">"Agencement de la boîte"</string>
    <string name="traitement_accueil">"Dernière Prise"</string>
    <string name="infotext">Pour plus d\'information sur un médicament, Veuillez appuyer sur une case</string>
    <string name="faq_1">Doit-on avoir un compte personnel pour utiliser l\'application Boita\'Médoc?</string>
    <string name="faq_1_reponse">Oui</string>
    <string name="faq_2">Que permet de faire l\'application Boîta\'Médoc précisément ?</string>
    <string name="faq_2_reponse">Notre application Boîta\'Médoc permet de suivre un traitement médical sans oubli et sans se tromper de médicament.</string>
    <string name="faq_3">Comment fonctionne l\'application Boîta\'Médoc ?</string>
    <string name="faq_3_reponse">Il suffit d\'ouvrir la page traitement afin de rentrer les traitements principaux puis d\'aller sur la boîte afin de l\'agencer en y mettant les médicaments suivants les explications décrites.</string>
    <string name="faq_4">A quel type de personne est destinée cette boîte de médicament ?</string>
    <string name="faq_4_reponse">Elle est destinée à tous types de personnes qui a un traitement médicamenteux. Généralement, plus on vieillit, plus nous serions contraint à prendre des médicaments.</string>
    <string name="faq_5">Combien de traitement puis-je mettre dans l\'application ?</string>
    <string name="faq_5_reponse">Au maximum, vous pourrez agencer huit différents traitements d\'un médicament.</string>
    <string name="faq_6">Peut-on avoir le nombre de comprimés au niveau de l\'application ?</string>
    <string name="faq_6_reponse">Oui, cela est faisable. Il faut simplement se rendre sur la page Boîte pour découvrir cela !</string>
    <string name="faq_7">Peut-on ouvrir un compartiment sans qu\'on ait un traitement ?</string>
    <string name="faq_7_reponse">Oui, grâce à la page Libre-Service.</string>
    <string name="faq_8">Vos données personnelles sont-ils partager à des entreprises tierces ?</string>
    <string name="faq_8_reponse">Non, du tout. Toutes les informations que vous rentrez au sein de l\'application reste uniquement chez Boîta\'Medoc, sur nos serveurs sécurisés.</string>
    <string name="faq_9">Y-a-t-il un abonnement à souscrire pour profiter de notre application ?</string>
    <string name="faq_9_reponse">Non, du moment que vous aurez acheté la boîte de médicament, vous pourrez profiter pleinement de l\'application Boîta\'Médoc.</string>
    <string name="CGU_date">En vigueur au 04 Juin 2019</string>
    <string name="cgu_intro">Les présentes conditions générales d\'utilisation (dites « CGU ») ont pour objet l\'encadrement juridique des modalités de mise à disposition de l’application mobile et des services par et de définir les conditions d’accès et d’utilisation des services par « l\'Utilisateur ».\n\nLes présentes CGU sont accessibles sur l’application mobile à la rubrique «CGU».</string>
    <string name="CGU1">ARTICLE 1 : Les mentions légales</string>
    <string name="CGU1_text">L\'édition de l’application mobile Boîta’Médoc est assurée par l’équipe Boîta’Médoc, un projet ESIEE Paris dont le siège social est situé au 2 Boulevard Blaise Pascal – 93162 NOISY-LE-GRAND CEDEX, adresse e-mail : contact@boitamedoc.com.\n\nLe Directeur de la publication est ANTON RAVEENDRAN Joyston, Chef de projet.</string>
    <string name="CGU2">ARTICLE 2 : Accès à l’application mobile</string>
    <string name="CGU2_text">L’application mobile Boîta’Médoc permet à l\'Utilisateur un accès gratuit aux services suivants :\n- Suivre ses traitements médicaux\n- Agencer une boîte de médicament\n- Prendre les médicaments en temps voulu via des notifications\n- Prendre les médicaments si besoin en libre-service\n\nL’application mobile Boîta’Médoc est accessible gratuitement en tout lieu à tout Utilisateur ayant un accès à Internet. Tous les frais supportés par l\'Utilisateur pour accéder au service (matériel informatique, logiciels, connexion Internet, etc.) sont à sa charge.</string>
    <string name="CGU3">ARTICLE 3 : Collecte des données</string>
    <string name="CGU3_text">L’application mobile Boîta’Médoc assure à l\'Utilisateur une collecte et un traitement d\'informations personnelles dans le respect de la vie privée conformément à la loi n°78/17 du 6 janvier 1978 relative à l\'informatique, aux fichiers et aux libertés.\n\nL’utilisation de l’application mobile Boîta’Médoc nécessite une inscription et une identification préalable. Vos données nominatives (nom, prénom, adresse postale, e-mail, numéro de téléphone,etc.) sont utilisées pour exécuter nos obligations légales résultant de la livraison des produits et des services, en vertu du Contrat de licence utilisateur final, de la Limite de garantie, le cas échéant, ou de toute autre condition applicable. Vous ne fournirez pas de fausses informations nominatives et ne créerez pas de compte pour une autre personne sans son autorisation. Vos coordonnées devront toujours être exactes et à jour. D’autre part, des données dites sensibles, liée à la santé de l’Utilisateur, seront aussi collectée par l’application afin de vous satisfaire au mieux la prise de médicament.\n\nCertaines des données techniques de votre appareil sont collectées automatiquement par l\'application mobile Boîta\'Médoc. Ces informations incluent notamment votre adresse IP, fournisseur d\'accès à Internet, configuration matérielle, configuration logicielle, type et langue du navigateur,etc. La collecte de ces données est nécessaire à la fourniture des services.\n\nVos données ne feront l\'objet d\'aucune communication à des tiers. Vous êtes toutefois informés qu\'elles pourront être divulguées en application d\'une loi, d\'un règlement ou en vertu d\'une décision d\'une autorité réglementaire ou judiciaire compétente.\n\nEn vertu de la loi Informatique et Libertés, en date du 6 janvier 1978, l\'Utilisateur dispose d\'un droit d\'accès, de rectification, de suppression et d\'opposition de ses données personnelles. L\'Utilisateur peut exercer ce droit en envoyant un mail à contact@boitamedoc.com.</string>
    <string name="CGU4">ARTICLE 4 : Propriété intellectuelle</string>
    <string name="CGU4_text">Les marques, logos, signes ainsi que tous les contenus de l\'application mobile Boîta\'Médoc (textes, images, son, etc) font l\'objet d\'une protection par le Code de la propriété intellectuelle et plus particulièrement par le droit d\'auteur.\n\nL\'Utilisateur doit solliciter l\'autorisation préalable de l’application mobile Boîta’Médoc pour toute reproduction, publication, copie des différents contenus. Il s\'engage à une utilisation des contenus de l\'application mobile Boîta\'Médoc dans un cadre strictement privé, toute utilisation à des fins commerciales et publicitaires est strictement interdite.\n\nToute représentation totale ou partielle de l’application mobile Boîta’Médoc par quelque procédé que ce soit, sans l’autorisation expresse de l’exploitant de l\'application mobile Boîta\'Médoc constituerait une contrefaçon sanctionnée par l’article L 335/2 et suivants du Code de la propriété intellectuelle.\n\nIl est rappelé conformément à l’article L122/5 du Code de propriété intellectuelle que l’Utilisateur qui reproduit, copie ou publie le contenu protégé doit citer l’auteur et sa source.</string>
    <string name="CGU5">ARTICLE 5 : Responsabilité</string>
    <string name="CGU5_text">Les sources des informations diffusées sur l’application mobile Boîta’Médoc sont réputées fiables mais il ne garantit pas qu’il soit exempt de défauts, d’erreurs ou d’omissions.\n\nLes informations communiquées sont présentées à titre indicatif et général sans valeur contractuelle. Malgré des mises à jour régulières, l’application mobile Boîta’Médoc ne peut être tenu responsable de la modification des dispositions administratives et juridiques survenant après la publication. De même, l\'application mobile Boîta\'Médoc ne peut être tenue responsable de l’utilisation et de l’interprétation de l’information contenue dans l’application mobile.\n\nL’application mobile Boîta’Médoc ne peut être tenu pour responsable d’éventuels virus qui pourraient infecter l’ordinateur ou tout matériel informatique de l’Internaute, suite à une utilisation, à l’accès, ou au téléchargement provenant de l’application mobile.\n\nLa responsabilité de l’application mobile Boîta’Médoc ne peut être engagée en cas de force majeure ou du fait imprévisible et insurmontable d\'un tiers.</string>
    <string name="CGU6">ARTICLE 6 : Liens hypertextes</string>
    <string name="CGU6_text">Des liens hypertextes peuvent être présents sur l’application mobile Boîta’Médoc. L’Utilisateur est informé qu’en cliquant sur ces liens, il sortira de l’application mobile. Ce dernier n’a pas de contrôle sur les pages web sur lesquelles aboutissent ces liens et ne saurait, en aucun cas, être responsable de leur contenu.</string>
    <string name="CGU7">ARTICLE 7 : Publication par l’Utilisateur</string>
    <string name="CGU7_text">L’application mobile Boîta’Médoc permet aux membres de publier sur son compte personnel, les données personnels liées à ses traitements médicaux.\n\nDans ses publications, le membre s’engage à respecter les règles de la Netiquette (règles de bonne conduite de l’internet) et les règles de droit en vigueur.\n\nL’application mobile Boîta’Médoc peut exercer une modération sur les publications et se réserve le droit de refuser leur mise en ligne, sans avoir à s’en justifier auprès du membre.\n\nLe membre reste titulaire de l’intégralité de ses droits de propriété intellectuelle. Mais en publiant une publication sur le site, il cède à la société éditrice le droit non exclusif et gratuit de représenter, reproduire, adapter, modifier, diffuser et distribuer sa publication, directement ou par un tiers autorisé, dans le monde entier, sur tout support (numérique ou physique), pour la durée de la propriété intellectuelle. Le Membre cède notamment le droit d\'utiliser sa publication sur internet et sur les réseaux de téléphonie mobile.\n\nLa société éditrice s\'engage à faire figurer le nom du membre à proximité de chaque utilisation de sa publication.\n\nTout contenu mis en ligne par l\'Utilisateur est de sa seule responsabilité. L\'Utilisateur s\'engage à ne pas mettre en ligne de contenus pouvant porter atteinte aux intérêts de tierces personnes. Tout recours en justice engagé par un tiers lésé contre l’application mobile Boîta’Médoc sera pris en charge par l\'Utilisateur.\n\nLe contenu de l\'Utilisateur peut être à tout moment et pour n\'importe quelle raison supprimé ou modifié par l’application mobile Boîta’Médoc, sans préavis.</string>
    <string name="CGU8">ARTICLE 8 : Droit applicable et juridiction compétente</string>
    <string name="CGU8_text">La législation française s\'applique au présent contrat. En cas d\'absence de résolution amiable d\'un litige né entre les parties, les tribunaux français seront seuls compétents pour en connaître.\n\nPour toute question relative à l’application des présentes CGU, vous pouvez joindre l’éditeur aux coordonnées inscrites à l’ARTICLE 1.</string>
</resources>