<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_accueil"
        android:icon="@drawable/ic_accueil"
        android:title="@string/title_accueil" />

    <item
        android:id="@+id/navigation_traitement"
        android:icon="@drawable/ic_traitement"
        android:title="@string/title_traitement" />

    <item
        android:id="@+id/navigation_boite"
        android:icon="@drawable/ic_boite"
        android:title="@string/title_boite" />

        <item
            android:id="@+id/navigation_libre_service"
            android:icon="@drawable/ic_libre_service"
            android:title="@string/title_libre_service" />

        <item
            android:id="@+id/navigation_profil"
            android:icon="@drawable/ic_profil"
            android:title="@string/title_profil" />


</menu>
